idea/testData/checker/regression/DescructuringDeclarationInForLoop.fir.kt
fun main() {
    <error descr="[UNRESOLVED_REFERENCE] Unresolved reference: hasNext"><error descr="[UNRESOLVED_REFERENCE] Unresolved reference: iterator"><error descr="[UNRESOLVED_REFERENCE] Unresolved reference: next">for ((i, j)<error descr="Expecting 'in'">)</error> {}</error></error></error>
}
